--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
-<html>
+<html lang = "en">
   <head>
     <title>Clark is Here!</title>
   </head>
   <body>
     
   </body>
-</html lang = "en">
+</html>
