--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
-<html lang='en'>
+<html lang=en>
   <head>
     <title>Clark is Here!</title>
   </head>
