Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <title>Clark is Here!</title>
-   <link>
+   <link rel ="stylesheet" type="text/css" href="">
   </head>
   <body>
     
