--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Clark is Here!</title>
+   <link rel ="stylesheet" type="text/css" href="a.css">
+  </head>
+  <body>
+    
+  </body>
+</html>
